# terminal-color-solver

./: .gitignore  CMakeLists.txt  README.md  color.cuh  color_test.cpp  flake.nix  hexa-color-solver.cu  hexa-color-solver.sh  output.hpp  rules.md  term-capture.sh  test.sh  theme-analyzer.py
junk/: run-optimizer.sh
screenshots/: htop.txt  mc.txt  mcedit.txt  tig.txt
themes/: 0-Wez  0-dracula  0-kitty  1-WCAG-Pastel-Dark-v2.2-OKLCH  2-WCAG-Pastel-Dark-v2.5-Golden  7mind-1  theme-000517  theme-000736  theme-002159  theme-003421  theme-194132  theme-213453  theme-225333  theme-232003  theme-233339  theme-233718  theme-233906  theme-234247  theme-234541  theme-234742  theme-235539  theme-235741  theme-260112-005646  theme-260112-010751  theme-260112-011232  theme-260112-011526  theme-260112-011853  theme-260112-012237  theme-260112-012627  theme-260112-012919  theme-260112-015021  theme-260112-115005  theme-260112-115214  theme-260112-115635  theme-260112-120637  theme-260112-121516  theme-260112-132722  theme-260112-133308  theme-260112-133718  theme-260112-134210  (+69 more)
